base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
