base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: meilisearch-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ttv-eks
    alb.ingress.kubernetes.io/certificate-arn: # Certificate ARN in ACM (for your domain)
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb
  rules:
    - host: "your.domain.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-meilisearch
              port:
                number: 7700
